src/test/ui/issues/10000-19999/issue-17758.nll.stderr
error[E0521]: borrowed data escapes outside of associated function
  --> $DIR/issue-17758.rs:7:9
   |
LL |     fn bar(&self) {
   |            ----- `self` is a reference that is only valid in the associated function body
LL |         self.foo();
   |         ^^^^^^^^^^ `self` escapes the associated function body here

error: aborting due to previous error

